<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/agencias"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.johnduran.jganalytics.AgenciasFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical"
            android:gravity="center"
            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/rRadioGrupo"
                android:gravity="center"
                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalEmpresa"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rTotal"
                    android:theme="@style/MyRadioButton"
                    android:checked="true"

                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medellin"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rMedellin"
                    android:theme="@style/MyRadioButton"

                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bogota"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rBogota"
                    android:theme="@style/MyRadioButton"

                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monteria"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rMonteria"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cartagena"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rCartagena"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pereira"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rPereira"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uraba"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rUraba"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bucaramanga"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rBucaramanga"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/barranquilla"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rBarranquilla"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cali"
                    android:textColor="@color/dimgray"
                    android:textSize="18dp"
                    android:id="@+id/rCali"
                    android:theme="@style/MyRadioButton"
                    />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:textSize="15dp"
                android:text="@string/consultar"
                android:textColor="@color/white"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:id="@+id/bConsultar"
                android:layout_marginBottom="5dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button"
                android:textSize="15dp"
                android:text="@string/consultargraficas"
                android:textColor="@color/white"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:id="@+id/bConsultarGraficas"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
